@@ -87,6 +87,8 @@ clicked on menu item.
 
 * Improved modules.json format and parsing.
 
+* Added ability to read storage modules information from menu module.
+
 
 2012.12.12, Version 0.1.8
 
